debug graphana connect
